--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # firebase_auth: ^5.3.3
   # firebase_auth_web: ^5.8.1
   http: ^1.0.0
+  salomon_bottom_bar: ^3.3.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
